@startuml
class Customer {
    + id: int
    + name: String
    + email: String
    + placeOrder(): void
}

class Order {
    + orderId: int
    + date: Date
    + totalAmount: double
    + addProduct(product: Product, quantity: int): void
    + calculateTotal(): double
}

class Product {
    + productId: int
    + name: String
    + price: double
    + stockQuantity: int
    + updateStock(quantity: int): void
}

class OrderItem {
    + itemId: int
    + quantity: int
    + subTotal: double
    + calculateSubTotal(): double
}

class Payment {
    + paymentId: int
    + amount: double
    + date: Date
    + processPayment(): boolean
}

Customer "1" --> "0..*" Order : places
Order "1" --> "1..*" OrderItem : contains
OrderItem "1" --> "1" Product : refers to
Order "1" --> "1" Payment : processes
@enduml